cabal-version: 2.2
name:          ghc-events2prof
version:       0.1.0.0
synopsis:      Convert ghc-events to ghc-prof profile
description:   Convert ghc-events to ghc-prof profile.
license:       BSD-3-Clause
license-file:  LICENSE
author:        Oleg Grenrus
maintainer:    not me
copyright:     (c) 2021 someone
category:      System
build-type:    Simple
tested-with:
  GHC ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.4 || ==9.0.1

source-repository head
  type:     git
  location: https://github.com/phadej/ghc-events2prof

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src
  exposed-modules:  GHC.Events2Prof
  other-modules:    GHC.Prof.BuildTree

  -- boot libraries
  build-depends:
    , base        >=4.9     && <4.17
    , containers  ^>=0.5.7.1 || ^>=0.6.0.1
    , text        ^>=1.2.3.0
    , time        >=1.6      && <1.13

  -- other libraries (tight(er) lower bounds)
  build-depends:
    , ghc-events  ^>=0.17
    , ghc-prof    ^>=1.4.1.9
    , scientific  ^>=0.3.7.0
    , vector      ^>=0.12.3.0
